<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp" >

    <com.sanotech.dchek.FooterView
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_bg_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"
                android:weightSum="1.0" >

                <TextView
                    android:id="@+id/tv_bg_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="Date"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="0.7"
                    android:orientation="horizontal"
                    android:weightSum="1.0" >

                    <TextView
                        android:id="@+id/tv_bg_cur_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:background="@drawable/white_bar"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="12/12/12" 
                        android:textSize="16sp"/>

                    <ImageView
                        android:id="@+id/img_bg_cal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.2"
                        android:src="@android:drawable/ic_menu_my_calendar" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_bg_note"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"
                android:weightSum="1.0" >

                <TextView
                    android:id="@+id/tv_bg_note"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="Notes"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_bg_txt_note"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="0.7"
                    android:background="@drawable/white_bar"
                    android:gravity="left|top"
                    android:hint="@string/enter_note"
                    android:paddingLeft="10dp"
                    android:paddingBottom="10dp">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_bg_level"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"
                android:weightSum="1.0" >

                <TextView
                    android:id="@+id/tv_bg_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/bg_unit"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_bg_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/white_bar"
                    android:gravity="center_vertical"
                    android:hint="@string/bg_level_hint"
                    android:inputType="number"
                    android:paddingLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_bg_during"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"
                android:weightSum="1.0" >

                <TextView
                    android:id="@+id/tv_bg_during"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="Time When Taken"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/sp_bg_during"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@drawable/white_bar"
                    android:entries="@array/bg_food_times"
                    android:prompt="@string/time_period"
                    android:padding="2dp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_bg_level_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>